--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
   "require": {
     "php": ">=5.3.2",
     "yiisoft/yii2": "*",
-	"kartik-v/yii2-widget-datetimepicker": "*"
+	"kartik-v/yii2-widget-datetimepicker": "*",
+	"yiidoc/yii2-redactor": "*"
   },
   "autoload": {
         "psr-4": {
